// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search tests should match snapshot 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  width: 100%;
  height: 2.5rem;
  border-style: solid;
  border-width: 1px;
  padding-left: 2rem;
  padding-right: 2.5rem;
  background-color: #FFFFFF;
  border-color: hsla(0, 0%, 73%, 1);
  border-radius: 4px;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #000000;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  padding-top: 0.4375rem;
  padding-bottom: 0.4375rem;
  margin: 0rem;
}

.emotion-1:hover {
  background-color: #FFFFFF;
  border-color: hsla(0, 0%, 45%, 1);
}

.emotion-1:focus {
  background-color: #FFFFFF;
  border-color: hsla(0, 0%, 29%, 1);
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(0, 0%, 93%, 1);
}

.emotion-1:disabled {
  background-color: hsla(0, 0%, 87%, 1);
  color: field.neutralDisabled;
}

.emotion-2 {
  position: relative;
}

.emotion-2 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #000000;
  top: 0rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
  margin: 0.625rem 0.25rem 0 0.5rem;
}

.emotion-3 {
  position: relative;
  margin-left: 1px;
  margin-right: 1px;
}

<form
    aria-label="Product"
    class="emotion-3"
    role="search"
  >
    <div
      class="emotion-2"
    >
      <svg
        class="emotion-0"
        fill="none"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M15.6921 16.7489C12.9329 18.9787 8.87883 18.8112 6.31415 16.2466C3.57033 13.5027 3.57033 9.05413 6.31415 6.31031C9.05798 3.56649 13.5066 3.56649 16.2504 6.31031C18.8151 8.87498 18.9825 12.9291 16.7528 15.6883L19.5366 18.4721C19.8295 18.765 19.8295 19.2398 19.5366 19.5327C19.2437 19.8256 18.7688 19.8256 18.4759 19.5327L15.6921 16.7489ZM7.37481 7.37097C9.53285 5.21293 13.0317 5.21293 15.1898 7.37097C17.3277 9.5089 17.3476 12.9628 15.2495 15.1252C15.2275 15.1428 15.2063 15.1617 15.1859 15.1821C15.1656 15.2024 15.1466 15.2237 15.1291 15.2457C12.9666 17.3438 9.51274 17.3238 7.37481 15.1859C5.21678 13.0279 5.21678 9.52901 7.37481 7.37097Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <input
        aria-label="Product"
        class="emotion-1"
        value=""
      />
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;

exports[`Search tests should match snapshot on loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-2 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  width: 100%;
  height: 2.5rem;
  border-style: solid;
  border-width: 1px;
  padding-left: 2rem;
  padding-right: 2.5rem;
  background-color: #FFFFFF;
  border-color: hsla(0, 0%, 73%, 1);
  border-radius: 4px;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #000000;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  padding-top: 0.4375rem;
  padding-bottom: 0.4375rem;
  margin: 0rem;
}

.emotion-2:hover {
  background-color: #FFFFFF;
  border-color: hsla(0, 0%, 45%, 1);
}

.emotion-2:focus {
  background-color: #FFFFFF;
  border-color: hsla(0, 0%, 29%, 1);
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(0, 0%, 93%, 1);
}

.emotion-2:disabled {
  background-color: hsla(0, 0%, 87%, 1);
  color: field.neutralDisabled;
}

.emotion-3 {
  position: relative;
}

.emotion-3 label {
  left: 44px;
}

.emotion-4 {
  position: relative;
  margin-left: 1px;
  margin-right: 1px;
}

.emotion-1 {
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
  width: 20px;
  height: 20px;
  top: 0rem;
  margin: 0.625rem 0.25rem 0 0.5rem;
  position: absolute;
}

.emotion-0 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

<form
    aria-label="Product"
    class="emotion-4"
    role="search"
  >
    <div
      class="emotion-3"
    >
      <svg
        class="emotion-1"
        focusable="false"
        viewBox="0 0 50 50"
      >
        <circle
          class="emotion-0"
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
      <input
        aria-label="Product"
        class="emotion-2"
        value=""
      />
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;
